--- a/login.html
+++ b/login.html
@@ -26,34 +26,36 @@
       </nav>
     </header>
     <main class="content">
-      <picture class="main">
-        <img src="./Img/Principal.png" alt="Imagem principal" />
-      </picture>
-      <section class="main">
-        <aside class="card">
-          <h4>Liga</h4>
-        <picture>
-          <img src="./Img/Liga.png" alt="">
-        </picture>
-        </aside>
-        <aside class="card">
-          <h4>Time</h4>
-          <picture>
-            <img src="./Img/Time.png" alt="">
-          </picture>  
-        </aside>
-        <aside class="card">
-          <h4>Jogador</h4>
-          <picture>
-           <img src="./Img/Jogador.png" alt="">
-          </picture>
-        </aside>
-        <aside class="card">
-          <h4>Mercado</h4>
-          <picture>
-            <img src="./Img/Mercado.png" alt="">
-          </picture>
-        </aside>
+      <section class="auth">
+        <h1>Login</h1>
+        <form action="cadastrar.html" method="post">
+          <label for="email">E-mail</label>
+          <div>
+            <img src="./Img/email.svg" alt="Email" />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              required
+              placeholder="E-mail"
+            />
+          </div>
+          <label for="senha">Senha</label>
+          <div>
+            <img src="./Img/key.svg" alt="Key" />
+            <input
+              type="password"
+              name="senha"
+              id="senha"
+              required
+              placeholder="Senha"
+            />
+          </div>
+          <p>
+            Não possui conta? <a href="cadastrar.html">Cadastre-se</a>
+            <button type="submit">Entrar</button>
+          </p>
+        </form>
       </section>
     </main>
     <footer>
